# juk

./: .gitignore  CMakeLists.txt  EmlidPub.rar  UserConfig.txt  git_upd  install_commands  install_commands.sh  j_stop  juk.sln  juk.vgdbcmake  juk_aruco_module  juk_core.vgdbcmake  juk_launch  juk_launch.sh  juk_navigation_control.rar  juk_stop  juk_stop.sh  test_fly
EmlidPub/: CMakeLists.txt  EmlidPub.cpp  LinuxUART.cpp  LinuxUART.h  RegexEmlidReachParser.cpp  RegexEmlidReachParser.h
include/: ArgParser.h
juk_aruco/: CMakeLists.txt  juk_aruco.cpp  main.cpp
juk_dji_control/: CMakeLists.txt  juk_dji_core.cpp
juk_dji_core/: CMakeLists.txt  juk-dji-core.cpp  juk_dji_core.cpp  juk_dji_core.vgdbcmake
juk_logger/: CMakeLists.txt  juk_logger.cpp  logger.h
juk_navigation_control/: CMakeLists.txt  NavigationNode.cpp  NavigationNode.cpp~RF10ebaa.TMP  NavigationNode.cpp~RF115503.TMP  NavigationNode.cpp~RF130a44.TMP  NavigationNode.h  NavigationNode.h~RF1130e1f.TMP  NavigationNode.h~RF11d7852.TMP  NavigationNode.h~RF5616ce9.TMP  NavigationNode.h~RF5623f3c.TMP  NavigationNode.h~RF562633f.TMP  NavigationNode.h~RF5626aa2.TMP  NavigationNode.h~RF565b74c.TMP  NavigationNode.h~RF566586e.TMP  NavigationNode.h~RF5705292.TMP  NavigationNode.h~RF57a87da.TMP  NavigationNode.h~RF57b505a.TMP  NavigationNode.h~RF57b73d0.TMP  NavigationNode.h~RF57cc5c3.TMP  NavigationNode.h~RF57d1b17.TMP  NavigationNode.h~RF580d6e7.TMP  NavigationNode.h~RF580e965.TMP  NavigationNode.h~RF5815bd6.TMP  NavigationNode.h~RF582d3e0.TMP  NavigationNode.h~RF583949f.TMP  NavigationNode.h~RF5b05b74.TMP  (+17 more)
(+202 files in other folders)
